FE-30: Fix gallery wrapping and add key to all mapped elements

--- a/src/sections/Needs/Needs.module.scss
+++ b/src/sections/Needs/Needs.module.scss
@@ -13,6 +13,7 @@
 .need__gallery {
   display: flex;
   gap: 4px;
+  flex-wrap: wrap;
 }
 
 .need__links {
